# SimplerData

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  python-checks.yml
samples/gh_analytics/: entities.py  flows.py  pyproject.toml  sources.py  stack.py
samples/gh_analytics/sources/: github.py  jaffle_shop.py
samples/gh_analytics/stack/: entities.py  flows.py  reverse_el.py  stack.py
samples/gh_analytics/stack/sources/: github.py  jaffle_shop.py
samples/gh_analytics/stack/tests/: test_build.py  test_models.py
samples/gh_analytics/tests/: test_build.py
simpler/: __init__.py  builders.py  calculations.py  entities.py  flows.py  naming.py  properties.py  reverse_el.py  rules.py  stack.py  tables.py  tools.py  yaml.py
simpler/connectors/: __init__.py  _base.py  singer.py
simpler/interop/: duckdb.py  github.py  meltano.py
simpler/stores/: __init__.py  _base.py
simpler/transforms/: inline.py  sql.py
