[tool.poetry]
name = "simpler-data"
version = "0.0.1"
description = "Everything should be a simpler as possible, and no simpler."
authors = ["Aaron (\"AJ\") Steers"]
readme = "README.md"
packages = [{include = "simpler_data"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
SQLAlchemy = ">=1.4,<2.0"
singer-sdk = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.264"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
